  as parameter to pylint.

  Closes #352

* Add ``modified-iterating-list``, ``modified-iterating-dict`` and ``modified-iterating-set``,
  emitted when items are added to or removed from respectively a list, dictionary or
  set being iterated through.

  Closes #5348

* Fix false-negative for ``assignment-from-none`` checker using list.sort() method.

  closes #5722

* Fixed crash from ``arguments-differ`` and ``arguments-renamed`` when methods were
  defined outside the top level of a class.

  Closes #5648

* Removed the deprecated ``check_docs`` extension. You can use the ``docparams`` checker
  to get the checks previously included in ``check_docs``.

  Closes #5322

* Added a ``testutil`` extra require to the packaging, as ``gitpython`` should not be a dependency
  all the time but is still required to use the primer helper code in ``pylint.testutil``. You can
  install it with ``pip install pylint[testutil]``.

  Closes #5486

* Reinstated checks from the python3 checker that are still useful for python 3
  (``eq-without-hash``). This is now in the ``pylint.extensions.eq_without_hash`` optional
  extension.

  Closes #5025

* Fixed an issue where ``ungrouped-imports`` could not be disabled without raising
  ``useless-suppression``.

  Ref #2366

* Added several checkers to deal with unicode security issues
  (see `Trojan Sources <https://trojansource.codes/>`_ and
  `PEP 672 <https://www.python.org/dev/peps/pep-0672/>`_ for details) that also
  concern the readability of the code. In detail the following checks were added:

  * ``bad-file-encoding`` checks that the file is encoded in UTF-8 as suggested by
    `PEP8 <https://www.python.org/dev/peps/pep-0008/#id20>`_.
    UTF-16 and UTF-32 are `not supported by Python <https://bugs.python.org/issue1503789>`_
    at the moment. If this ever changes
    ``invalid-unicode-codec`` checks that they aren't used, to allow for backwards
    compatibility.
